--- a/admin/index.html
+++ b/admin/index.html
@@ -51,47 +51,49 @@
 
     <script src="/admin/decap-cms.js"></script>
     <script>
-      // Initialize with inline config
-      CMS.init({
-        config: {
-          backend: {
-            name: "github",
-            repo: "FrankB4U/AGS",
-            branch: "main",
-            base_url: "https://agscms.netlify.app/.netlify/functions",
-            auth_endpoint: "start"
-          },
-          media_folder: "uploads",
-          public_folder: "/uploads",
-          collections: [
-            {
-              name: "posts",
-              label: "Promotions & News",
-              folder: "posts",
-              create: true,
-              slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
-              fields: [
-                { label: "Title", name: "title", widget: "string" },
-                { label: "Date", name: "date", widget: "datetime" },
-                { label: "Body", name: "body", widget: "markdown" },
-                { label: "Image", name: "image", widget: "image", required: false }
-              ]
+      // Wait until everything is loaded before initializing CMS
+      window.addEventListener('DOMContentLoaded', function () {
+        CMS.init({
+          config: {
+            backend: {
+              name: "github",
+              repo: "FrankB4U/AGS",
+              branch: "main",
+              base_url: "https://agscms.netlify.app/.netlify/functions",
+              auth_endpoint: "start"
             },
-            {
-              name: "prices",
-              label: "Price List",
-              folder: "prices",
-              create: true,
-              slug: "{{slug}}",
-              fields: [
-                { label: "Material Name", name: "material", widget: "string" },
-                { label: "Price per unit", name: "price", widget: "string" },
-                { label: "Description", name: "description", widget: "text", required: false },
-                { label: "Last Updated", name: "date", widget: "datetime" }
-              ]
-            }
-          ]
-        }
+            media_folder: "uploads",
+            public_folder: "/uploads",
+            collections: [
+              {
+                name: "posts",
+                label: "Promotions & News",
+                folder: "posts",
+                create: true,
+                slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
+                fields: [
+                  { label: "Title", name: "title", widget: "string" },
+                  { label: "Date", name: "date", widget: "datetime" },
+                  { label: "Body", name: "body", widget: "markdown" },
+                  { label: "Image", name: "image", widget: "image", required: false }
+                ]
+              },
+              {
+                name: "prices",
+                label: "Price List",
+                folder: "prices",
+                create: true,
+                slug: "{{slug}}",
+                fields: [
+                  { label: "Material Name", name: "material", widget: "string" },
+                  { label: "Price per unit", name: "price", widget: "string" },
+                  { label: "Description", name: "description", widget: "text", required: false },
+                  { label: "Last Updated", name: "date", widget: "datetime" }
+                ]
+              }
+            ]
+          }
+        });
       });
     </script>
   </body>
