--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,11 @@
     <title>Content Manager</title>
 
     <script>
-      // Clean ?code param from URL (GitHub OAuth)
+      // Use manual init
+      window.CMS_MANUAL_INIT = true;
+      window.CMS_LOAD_CONFIG_FILE = false;
+
+      // Clean ?code param
       if (window.location.search.includes("code=")) {
         const cleanUrl =
           window.location.origin + window.location.pathname + window.location.hash;
@@ -23,7 +27,7 @@
       cleanOAuthHash();
       window.addEventListener("hashchange", cleanOAuthHash);
 
-      // Store token for Decap to use
+      // Store token for Decap
       (function storeToken() {
         const hash = window.location.hash.substring(1);
         const params = new URLSearchParams(hash);
@@ -39,60 +43,63 @@
           );
         }
       })();
-
-      // Prevent external config fetch (404)
-      window.CMS_LOAD_CONFIG_FILE = false;
     </script>
   </head>
   <body>
     <div id="nc-root"></div>
 
-    <!-- Load Decap CMS -->
     <script src="/admin/decap-cms.js"></script>
 
     <script>
-      // Provide inline config directly to CMS
-      CMS.init({
-        config: {
-          backend: {
-            name: "github",
-            repo: "FrankB4U/AGS",
-            branch: "main",
-            base_url: "https://agscms.netlify.app/.netlify/functions",
-            auth_endpoint: "start"
-          },
-          media_folder: "uploads",
-          public_folder: "/uploads",
-          collections: [
-            {
-              name: "posts",
-              label: "Promotions & News",
-              folder: "posts",
-              create: true,
-              slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
-              fields: [
-                { label: "Title", name: "title", widget: "string" },
-                { label: "Date", name: "date", widget: "datetime" },
-                { label: "Body", name: "body", widget: "markdown" },
-                { label: "Image", name: "image", widget: "image", required: false }
-              ]
-            },
-            {
-              name: "prices",
-              label: "Price List",
-              folder: "prices",
-              create: true,
-              slug: "{{slug}}",
-              fields: [
-                { label: "Material Name", name: "material", widget: "string" },
-                { label: "Price per unit", name: "price", widget: "string" },
-                { label: "Description", name: "description", widget: "text", required: false },
-                { label: "Last Updated", name: "date", widget: "datetime" }
+      // Wait until CMS is defined, then initialize with inline config
+      function initWhenReady() {
+        if (window.CMS && typeof CMS.init === "function") {
+          CMS.init({
+            config: {
+              backend: {
+                name: "github",
+                repo: "FrankB4U/AGS",
+                branch: "main",
+                base_url: "https://agscms.netlify.app/.netlify/functions",
+                auth_endpoint: "start"
+              },
+              media_folder: "uploads",
+              public_folder: "/uploads",
+              collections: [
+                {
+                  name: "posts",
+                  label: "Promotions & News",
+                  folder: "posts",
+                  create: true,
+                  slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
+                  fields: [
+                    { label: "Title", name: "title", widget: "string" },
+                    { label: "Date", name: "date", widget: "datetime" },
+                    { label: "Body", name: "body", widget: "markdown" },
+                    { label: "Image", name: "image", widget: "image", required: false }
+                  ]
+                },
+                {
+                  name: "prices",
+                  label: "Price List",
+                  folder: "prices",
+                  create: true,
+                  slug: "{{slug}}",
+                  fields: [
+                    { label: "Material Name", name: "material", widget: "string" },
+                    { label: "Price per unit", name: "price", widget: "string" },
+                    { label: "Description", name: "description", widget: "text", required: false },
+                    { label: "Last Updated", name: "date", widget: "datetime" }
+                  ]
+                }
               ]
             }
-          ]
+          });
+        } else {
+          setTimeout(initWhenReady, 50); // Retry until CMS is available
         }
-      });
+      }
+      initWhenReady();
     </script>
   </body>
 </html>
