--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <title>Content Manager</title>
 
     <script>
-      // Enable manual init for stable Netlify CMS v2 flow
+      // Manual init for v2
       window.CMS_MANUAL_INIT = true;
 
       // Clean ?code param from OAuth redirect
@@ -26,7 +26,7 @@
       cleanOAuthHash();
       window.addEventListener("hashchange", cleanOAuthHash);
 
-      // Store token in localStorage so CMS can use it
+      // Store token in localStorage
       (function storeToken() {
         const hash = window.location.hash.substring(1);
         const params = new URLSearchParams(hash);
@@ -35,3 +35,66 @@
         if (token) {
           localStorage.setItem(
             "netlify-cms-user",
+            JSON.stringify({
+              token: token,
+              provider: "github",
+            })
+          );
+        }
+      })();
+
+      // Disable config.yml fetch
+      window.CMS_LOAD_CONFIG_FILE = false;
+    </script>
+  </head>
+  <body>
+    <div id="nc-root"></div>
+
+    <!-- IMPORTANT: Load Netlify CMS v2 (not decap) -->
+    <script src="https://unpkg.com/netlify-cms-app@2.10.192/dist/netlify-cms.js"></script>
+
+    <script>
+      CMS.init({
+        config: {
+          backend: {
+            name: "github",
+            repo: "FrankB4U/AGS",
+            branch: "main",
+            base_url: "https://agscms.netlify.app/.netlify/functions",
+            auth_endpoint: "start"
+          },
+          media_folder: "uploads",
+          public_folder: "/uploads",
+          collections: [
+            {
+              name: "posts",
+              label: "Promotions & News",
+              folder: "posts",
+              create: true,
+              slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
+              fields: [
+                { label: "Title", name: "title", widget: "string" },
+                { label: "Date", name: "date", widget: "datetime" },
+                { label: "Body", name: "body", widget: "markdown" },
+                { label: "Image", name: "image", widget: "image", required: false }
+              ]
+            },
+            {
+              name: "prices",
+              label: "Price List",
+              folder: "prices",
+              create: true,
+              slug: "{{slug}}",
+              fields: [
+                { label: "Material Name", name: "material", widget: "string" },
+                { label: "Price per unit", name: "price", widget: "string" },
+                { label: "Description", name: "description", widget: "text", required: false },
+                { label: "Last Updated", name: "date", widget: "datetime" }
+              ]
+            }
+          ]
+        }
+      });
+    </script>
+  </body>
+</html>
