--- a/admin/index.html
+++ b/admin/index.html
@@ -51,7 +51,8 @@
     <div id="nc-root"></div>
 
     <!-- IMPORTANT: Load Netlify CMS v2 (not decap) -->
-    <script src="https://unpkg.com/netlify-cms-app@2.10.192/dist/netlify-cms.js"></script>
+    <script src="https://unpkg.com/netlify-cms-app@2.10.192/dist/netlify-cms.js" defer></script>
+
 
     <script>
       CMS.init({
